Fixed "add new branch" block
- Cleaned layout
- Avoided absolute positioning for zen
- Removed dialog-content styling that breaks scrollable modal footer overlap

--- a/apps/candyland/src/app/shared/containers/create-merchant-popup/create-merchant-popup.component.scss
+++ b/apps/candyland/src/app/shared/containers/create-merchant-popup/create-merchant-popup.component.scss
@@ -27,8 +27,8 @@
 
   &-content {
     padding: 0 3.3rem;
-    margin-bottom: 1.6rem;
     max-height: 65vh;
+    min-width: 55rem;
     overflow-y: auto;
   }
 
